Add number display and buttons

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
 
+    <div class="container">
+        <div id="number">0</div>
+        <button id="decreaseButton">Decrease</button>
+        <button id="resetButton">Reset</button>
+        <button id="increaseButton">Increase</button>
+    </div>
 
-    
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
