--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div class="container">
-        <div id="number">0</div>
-        <button id="decreaseButton">Decrease</button>
-        <button id="resetButton">Reset</button>
-        <button id="increaseButton">Increase</button>
-    </div>
-
+    <main>
+        <div class="container">
+            <div id="number">0</div>
+            <button id="decreaseButton">Decrease</button>
+            <button id="resetButton">Reset</button>
+            <button id="increaseButton">Increase</button>
+        </div>
+    </main>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
