Wrap buttons in separate container

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <main>
         <div class="container">
-            <div id="number">0</div>
-            <button id="decreaseButton">Decrease</button>
-            <button id="resetButton">Reset</button>
-            <button id="increaseButton">Increase</button>
+            <div id="numberDisplay">0</div>
+            <div class="buttons">
+                <button id="decreaseButton">Decrease</button>
+                <button id="resetButton">Reset</button>
+                <button id="increaseButton">Increase</button>
+            </div>
         </div>
     </main>
 <script type="text/javascript" src="script.js"></script>
