--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .greenText {
+            color: green;
+        }
+
+        .redText {
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <main>
